--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <span class="line line3"></span>
                     </div>
                     <div class="logo-container">
-                        <a href=""><img src = "img/catlover-logo.png" class="logo"/></a>
+                        <a href=""><img src = "img/Logo.jpg" class="logo"/></a>
                     </div>
                     <ul class="menu-items">
                         <li><a href="#home">Головна</a></li>
