--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <span class="line line3"></span>
                     </div>
                     <div class="logo-container">
-                        <a href=""><img src = "img/Logo.jpg" class="logo"/></a>
+                        <a href="#home"><img src = "img/Logo.jpg" class="logo"/></a>
                     </div>
                         <ul class="menu-items">
                             <li><a href="#home">Головна</a></li>
@@ -31,11 +31,17 @@
                             <li><a href="#exhibitions">Виставки</a></li>
                             <li><a href="#aboutUs">Про нас</a></li>
                             <li><a href="#contact">Контакти</a></li>
+                        <ul class="menu-register-items">
+                            <li><a href="">Вхід</a></li>
+                                <li>/</li>
+                                <li><a href="">Реєстрація</a></li>
+                            </ul>
+                        </ul>
+
                         <ul class="register-items">
                             <li><a href="">Вхід</a></li>
                             <li>/</li>
                             <li><a href="">Реєстрація</a></li>
-                        </ul>
                         </ul>
                 </div>
             </nav>
