--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                         <span class="line line3"></span>
                     </div>
                     <div class="logo-container">
-                        <a href="#home"><img src = "img/Logo.jpg" class="logo"/></a>
+                        <a href="index.html"><img src = "img/Logo.jpg" class="logo"/></a>
                     </div>
                         <ul class="menu-items">
-                            <li><a href="#home">Головна</a></li>
+                            <li><a href="index.html">Головна</a></li>
                             <li><a href="#about">Оголошення</a></li>
                             <li><a href="#catalogue">Каталог</a></li>
                             <li><a href="#winners">Переможці</a></li>
@@ -32,16 +32,16 @@
                             <li><a href="#aboutUs">Про нас</a></li>
                             <li><a href="#contact">Контакти</a></li>
                         <ul class="menu-register-items">
-                            <li><a href="">Вхід</a></li>
+                            <li><a href="login.html">Вхід</a></li>
                                 <li>/</li>
-                                <li><a href="">Реєстрація</a></li>
+                                <li><a href="register.html">Реєстрація</a></li>
                             </ul>
                         </ul>
 
                         <ul class="register-items">
-                            <li><a href="">Вхід</a></li>
+                            <li><a href="login.html">Вхід</a></li>
                             <li>/</li>
-                            <li><a href="">Реєстрація</a></li>
+                            <li><a href="register.html">Реєстрація</a></li>
                         </ul>
                 </div>
             </nav>
@@ -229,8 +229,8 @@
                     </div>
 
                     <div class="footer-register certificate">
-                        <a href=""><button class="btn btn-main reg-btn">Вхід</button></a>
-                        <a href=""><button class="btn btn-main reg-btn">Реєстрація</button></a>
+                        <a href="login.html"><button class="btn btn-main reg-btn">Вхід</button></a>
+                        <a href="register.html"><button class="btn btn-main reg-btn">Реєстрація</button></a>
                         <div class="reg-text text-social-media-block ">
                             Реєстрація завжди відкрита, не бійся, це безкоштовно!
                         </div>
@@ -238,7 +238,7 @@
                 </div>
             </div>
 
-            <hr style="height: 2px; backgroud-color:#444;"/>
+            <hr/>
 
             <div class ="footer-rights">
                 <h1>@Всі права захищені!</h1>
