--- a/login.html
+++ b/login.html
@@ -22,20 +22,38 @@
                     </div>
                     <div class="logo-container">
                         <a href="index.html"><img src = "img/Logo.jpg" class="logo"/></a>
+                        <p>Котолюб</p>
                     </div>
                         <ul class="menu-items">
                             <li><a href="index.html">Головна</a></li>
-                            <li><a href="#about">Оголошення</a></li>
-                            <li><a href="#catalogue">Каталог</a></li>
+
+                            <li class="menu-drop-block"><a>Публікації</a>
+                                <ul>
+                                    <li><a href="#catalogue">Каталог</a></li>
+                                    <li><a href="forum.html">Форум</a></li>
+                                    <li><a href="#about">Оголошення</a></li>
+                                </ul>
+                            </li>
+
+                             <!--Відображення для мобільних пристроїв-->
+                             <li class="phone-item"><a href="#catalogue">Каталог</a></li>
+                             <li class="phone-item"><a href="forum.html">Форум</a></li>
+                             <li class="phone-item"><a href="#about">Оголошення</a></li>
+                             <!--Відображення для мобільних пристроїв-->
+
+                            <li><a href="exhibitions.html">Виставки</a></li>
                             <li><a href="index.html">Переможці</a></li>
-                            <li><a href="#exhibitions">Виставки</a></li>
                             <li><a href="index.html">Про нас</a></li>
                             <li><a href="index.html">Контакти</a></li>
-                        <ul class="menu-register-items">
-                            <li><a href="login.html">Вхід</a></li>
+
+
+                            <!--Відображення для мобільних пристроїв-->
+                            <ul class="menu-register-items">
+                                <li><a href="login.html">Вхід</a></li>
                                 <li>/</li>
                                 <li><a href="register.html">Реєстрація</a></li>
                             </ul>
+                            <!--Відображення для мобільних пристроїв-->
                         </ul>
 
                         <ul class="register-items">
