--- a/exhibitions.html
+++ b/exhibitions.html
@@ -23,16 +23,16 @@
                     </div>
                     <div class="logo-container">
                         <a href="index.html"><img src = "img/Logo.jpg" class="logo"/></a>
-                        <p>Котолюб</p>
+                        <p class="logo-text">Клуб любителів кішок "Котолюб"</p>
                     </div>
                         <ul class="menu-items">
                             <li><a href="index.html">Головна</a></li>
 
                             <li class="menu-drop-block"><a>Публікації</a>
                                 <ul>
-                                    <li><a href="#catalogue">Каталог</a></li>
-                                    <li><a href="forum.html">Форум</a></li>
-                                    <li><a href="#about">Оголошення</a></li>
+                                    <li class="scrolled"><a href="#catalogue">Каталог</a></li>
+                                    <li class="scrolled"><a href="forum.html">Форум</a></li>
+                                    <li class="scrolled"><a href="#about">Оголошення</a></li>
                                 </ul>
                             </li>
 
@@ -42,10 +42,10 @@
                              <li class="phone-item"><a href="#about">Оголошення</a></li>
                              <!--Відображення для мобільних пристроїв-->
 
-                            <li><a href="exhibitions.html">Виставки</a></li>
-                            <li><a href="index.html">Переможці</a></li>
-                            <li><a href="index.html">Про нас</a></li>
-                            <li><a href="index.html">Контакти</a></li>
+                            <li class="scrolled"><a href="exhibitions.html" style="color:rgb(255, 228, 120)">Виставки</a></li>
+                            <li class="scrolled"><a href="index.html">Переможці</a></li>
+                            <li class="scrolled"><a href="index.html">Про нас</a></li>
+                            <li class="scrolled"><a href="index.html">Контакти</a></li>
 
 
                             <!--Відображення для мобільних пристроїв-->
@@ -53,14 +53,18 @@
                                 <li><a href="login.html">Вхід</a></li>
                                 <li>/</li>
                                 <li><a href="register.html">Реєстрація</a></li>
+
                             </ul>
                             <!--Відображення для мобільних пристроїв-->
                         </ul>
 
                         <ul class="register-items">
-                            <li><a href="login.html">Вхід</a></li>
-                            <li>/</li>
-                            <li><a href="register.html">Реєстрація</a></li>
+                            <li class="menu-drop-block-reg"> <a>Вхід/Реєстрація</a>
+                                <ul>
+                                    <li><a href="login.html" >Вхід до клубу котячих любителів "Котолюб"</a></li>
+                                    <li><a href="register.html">Реєстрація членів клубу котячих любителів "Котолюб"</a></li>
+                                </ul>
+                            </li>
                         </ul>
                 </div>
             </nav>
@@ -73,7 +77,7 @@
 
             <div class="text-exhibitions-block info-club-block">
                 Преставляємо нову котячу виставку <b>"Not Nuance November Cat"</b>, яка пройде <u>із 10 включно по 21 листопада 2024 року!</u> Хочемо сказати, що в цій виставці будуть брати
-                участь всі бажаючі господарі із їхніми пухнастими котячими членами сім'ї. Учасники матимуть змогу виграти титул найкращого кота року!
+                участь всі бажаючі господарі із їхніми пухнастими домашніми юлюбленцями. Учасники матимуть змогу виграти титул найкращого кота року!
                 А також невеликий приз від наших партнерів. Спільно із компаніями <b>"Yammy-Yammy-Cat", "HP catrin", "North Kiss", "Irina Cat"</b> та іншими
                 наш клуб <b>"Котолюб"</b> влаштує котячу виставку у якій буде вибрано найкращого господаря та кота/кішку за різними номінаціями. Найголовніший
                 приз який пропонують наші партнери в номінації кіт та господар року це <b>5-ти річний сертифікат на безкоштовний корм для вашого домашнього улюбленця від магазинів партнерів
@@ -179,6 +183,6 @@
         
     </div>
 
-    <script src="scripts/slider-script.js"></script>
+    <script src="scripts/height-properties.js"></script>
 </body>
 </html>
