Change text in header add increased the font

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="logo-container">
                         <a href="index.html"><img src = "img/Logo.jpg" class="logo"/></a>
-                        <p class="logo-text">Клуб любителів кішок "Котолюб"</p>
+                        <p class="logo-text">Клуб "Котолюб"</p>
                     </div>
                         <ul class="menu-items">
                             <li><a href="#home" style="color:rgb(255, 228, 120)">Головна</a></li>
